--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,14 @@
 
     <string name="updateapp">Aggiornamento app...</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">Generale</string>
+
+    <string name="pref_host_url">Web server url</string>
+    <string name="host_url_text">http://www.mywebsite.com</string>
 
 </resources>
